tests/expectations/parser/functions/test_keyword_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'async', 'const', 'function', 'inline', 'mapping', 'storage', 'script', 'transition' -- found 'test'
    --> test:3:5
     |
   3 |     test main() {}}
     |     ^^^^
